--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+ .people {
+  grid-template-columns: 1fr 1fr;
+ }
+
 .rbc-today{
     background: linear-gradient(0deg, rgba(63, 56, 73, 0.5), rgba(63, 56, 73, 0.5)),linear-gradient(0deg, #CBC5D3, #CBC5D3) !important;
 }
